# g-tools

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  _g_completions.sh  test_01.sh
src/: config.rs  lib.rs  main.rs
tests/: tests.rs
