[package]
name = "g-tools"
version = "0.2.0"
edition = "2024"
description = "Geraldo's toos"
license-file = "LICENSE"
homepage = "https://geraldo.dev"
default-run = "G"

[[bin]]
name = "G"
path = "src/main.rs"

[dependencies]
clap = { version="4.6.0", features = ["derive", "cargo"] }
colored = "3.1.1"
pathsearch = "0.2.0"
prettycli = "0.1.1"
shellexpand = "3.1.2"
sudo = "0.6.0"
