[package]
name = "g-tools"
version = "0.2.1"
description = "Geraldo's toolbox"
authors = ["Geraldo Ribeiro <geraldolsribeiro@gmail.com>"]
categories = ["command-line-utilities"]
default-run = "G"
edition = "2024"
homepage = "https://lib.rs/g-tools"
keywords = [ "subcommand", "tools", "tui" ]
license-file = "LICENSE"
readme = "README.md"
# repository = "https://gitlab.com/geraldolsribeiro/g-tools"

[[bin]]
name = "G"
path = "src/main.rs"

[dependencies]
clap = { version="4.6.0", features = ["derive", "cargo"] }
cli-clipboard = "0.4.0"
colored = "3.1.1"
pathsearch = "0.2.0"
prettycli = "0.1.1"
shellexpand = "3.1.2"
sudo = "0.6.0"
